<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".splashActivity">

    <TextView
        android:id="@+id/firsttxtview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/titan_one"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgeviewkid"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/kidmask"
        android:layout_below="@+id/firsttxtview"
        android:layout_margin="30dp"
        />

    <TextView
        android:id="@+id/secondtxtview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/devlop"
        android:textAlignment="center"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imgeviewkid"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/thirdtxtview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/names"
        android:textAlignment="center"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/secondtxtview"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>


</RelativeLayout>


